# samsung-exlink

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: demo.py  probe_sources.py  serial_dump.py  show_service_menu.py
src/samsung_exlink/: __init__.py  __main__.py  const.py  models.py  protocol.py  state.py  tv.py
tests/: conftest.py  test_protocol.py  test_samsung_tv.py
